moved tranform code to different file; began work on brats-2018 data loading

--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -165,20 +165,12 @@
     "from monai.networks.nets import SegResNet\n",
     "from monai.transforms import (\n",
     "    Activations,\n",
-    "    Activationsd,\n",
     "    AsDiscrete,\n",
-    "    AsDiscreted,\n",
     "    Compose,\n",
-    "    LoadImaged,\n",
-    "    MapTransform,\n",
-    "    NormalizeIntensityd,\n",
-    "    Orientationd,\n",
-    "    Spacingd,\n",
-    "    EnsureTyped,\n",
-    "    EnsureChannelFirstd,\n",
     ")\n",
     "from monai.utils import set_determinism\n",
     "from tqdm import tqdm\n",
+    "from transforms import tumor_seg_transform as data_transform\n",
     "\n",
     "import torch"
    ]
@@ -231,57 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ConvertToMultiChannelBasedOnBratsClassesd(MapTransform):\n",
-    "    \"\"\"\n",
-    "    Convert labels to multi channels based on brats classes:\n",
-    "    label 1 is the peritumoral edema\n",
-    "    label 2 is the GD-enhancing tumor\n",
-    "    label 3 is the necrotic and non-enhancing tumor core\n",
-    "    The possible classes are TC (Tumor core), WT (Whole tumor)\n",
-    "    and ET (Enhancing tumor).\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __call__(self, data):\n",
-    "        d = dict(data)\n",
-    "        for key in self.keys:\n",
-    "            result = []\n",
-    "            # merge label 2 and label 3 to construct TC\n",
-    "            result.append(torch.logical_or(d[key] == 2, d[key] == 3))\n",
-    "            # merge labels 1, 2 and 3 to construct WT\n",
-    "            result.append(torch.logical_or(torch.logical_or(d[key] == 2, d[key] == 3), d[key] == 1))\n",
-    "            # label 2 is ET\n",
-    "            result.append(d[key] == 2)\n",
-    "            d[key] = torch.stack(result, axis=0).float()\n",
-    "        return d\n",
-    "    \n",
-    "val_transform = Compose(\n",
-    "    [\n",
-    "        LoadImaged(keys=[\"image\", \"label\"]),\n",
-    "        EnsureChannelFirstd(keys=\"image\"),\n",
-    "        EnsureTyped(keys=[\"image\", \"label\"]),\n",
-    "        ConvertToMultiChannelBasedOnBratsClassesd(keys=\"label\"),\n",
-    "        Orientationd(keys=[\"image\", \"label\"], axcodes=\"RAS\"),\n",
-    "        Spacingd(\n",
-    "            keys=[\"image\", \"label\"],\n",
-    "            pixdim=(1.0, 1.0, 1.0),\n",
-    "            mode=(\"bilinear\", \"nearest\"),\n",
-    "        ),\n",
-    "        NormalizeIntensityd(keys=\"image\", nonzero=True, channel_wise=True),\n",
-    "    ]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "val_ds = DecathlonDataset(\n",
     "    root_dir=DATA_ROOT_DIR,\n",
     "    task=\"Task01_BrainTumour\",\n",
-    "    transform=val_transform,\n",
+    "    transform=data_transform['val'],\n",
     "    section=\"validation\",\n",
     "    download=False,\n",
     "    cache_rate=0.0,\n",
