--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -98,28 +98,15 @@
     "from monai.networks.nets import SegResNet\n",
     "from monai.transforms import (\n",
     "    Activations,\n",
-    "    Activationsd,\n",
     "    AsDiscrete,\n",
-    "    AsDiscreted,\n",
     "    Compose,\n",
-    "    Invertd,\n",
-    "    LoadImaged,\n",
-    "    MapTransform,\n",
-    "    NormalizeIntensityd,\n",
-    "    Orientationd,\n",
-    "    RandFlipd,\n",
-    "    RandScaleIntensityd,\n",
-    "    RandShiftIntensityd,\n",
-    "    RandSpatialCropd,\n",
-    "    Spacingd,\n",
-    "    EnsureTyped,\n",
-    "    EnsureChannelFirstd,\n",
     ")\n",
     "from monai.utils import set_determinism\n",
-    "# import onnxruntime\n",
     "from tqdm import tqdm\n",
     "\n",
     "import torch\n",
+    "\n",
+    "from transforms import tumor_seg_transform as data_transform\n",
     "\n",
     "# print_config()"
    ]
@@ -158,9 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define a new transform to convert brain tumor labels\n",
-    "\n",
-    "Here we convert the multi-classes labels into multi-labels segmentation task in One-Hot format."
+    "### Setup transforms for training and validation"
    ]
   },
   {
@@ -169,81 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ConvertToMultiChannelBasedOnBratsClassesd(MapTransform):\n",
-    "    \"\"\"\n",
-    "    Convert labels to multi channels based on brats classes:\n",
-    "    label 1 is the peritumoral edema\n",
-    "    label 2 is the GD-enhancing tumor\n",
-    "    label 3 is the necrotic and non-enhancing tumor core\n",
-    "    The possible classes are TC (Tumor core), WT (Whole tumor)\n",
-    "    and ET (Enhancing tumor).\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __call__(self, data):\n",
-    "        d = dict(data)\n",
-    "        for key in self.keys:\n",
-    "            result = []\n",
-    "            # merge label 2 and label 3 to construct TC\n",
-    "            result.append(torch.logical_or(d[key] == 2, d[key] == 3))\n",
-    "            # merge labels 1, 2 and 3 to construct WT\n",
-    "            result.append(torch.logical_or(torch.logical_or(d[key] == 2, d[key] == 3), d[key] == 1))\n",
-    "            # label 2 is ET\n",
-    "            result.append(d[key] == 2)\n",
-    "            d[key] = torch.stack(result, axis=0).float()\n",
-    "        return d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup transforms for training and validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_transform = Compose(\n",
-    "    [\n",
-    "        # load 4 Nifti images and stack them together\n",
-    "        LoadImaged(keys=[\"image\", \"label\"]),\n",
-    "        EnsureChannelFirstd(keys=\"image\"),\n",
-    "        EnsureTyped(keys=[\"image\", \"label\"]),\n",
-    "        ConvertToMultiChannelBasedOnBratsClassesd(keys=\"label\"),\n",
-    "        Orientationd(keys=[\"image\", \"label\"], axcodes=\"RAS\"),\n",
-    "        Spacingd(\n",
-    "            keys=[\"image\", \"label\"],\n",
-    "            pixdim=(1.0, 1.0, 1.0),\n",
-    "            mode=(\"bilinear\", \"nearest\"),\n",
-    "        ),\n",
-    "        RandSpatialCropd(keys=[\"image\", \"label\"], roi_size=[224, 224, 144], random_size=False),\n",
-    "        RandFlipd(keys=[\"image\", \"label\"], prob=0.5, spatial_axis=0),\n",
-    "        RandFlipd(keys=[\"image\", \"label\"], prob=0.5, spatial_axis=1),\n",
-    "        RandFlipd(keys=[\"image\", \"label\"], prob=0.5, spatial_axis=2),\n",
-    "        NormalizeIntensityd(keys=\"image\", nonzero=True, channel_wise=True),\n",
-    "        RandScaleIntensityd(keys=\"image\", factors=0.1, prob=1.0),\n",
-    "        RandShiftIntensityd(keys=\"image\", offsets=0.1, prob=1.0),\n",
-    "    ]\n",
-    ")\n",
-    "val_transform = Compose(\n",
-    "    [\n",
-    "        LoadImaged(keys=[\"image\", \"label\"]),\n",
-    "        EnsureChannelFirstd(keys=\"image\"),\n",
-    "        EnsureTyped(keys=[\"image\", \"label\"]),\n",
-    "        ConvertToMultiChannelBasedOnBratsClassesd(keys=\"label\"),\n",
-    "        Orientationd(keys=[\"image\", \"label\"], axcodes=\"RAS\"),\n",
-    "        Spacingd(\n",
-    "            keys=[\"image\", \"label\"],\n",
-    "            pixdim=(1.0, 1.0, 1.0),\n",
-    "            mode=(\"bilinear\", \"nearest\"),\n",
-    "        ),\n",
-    "        NormalizeIntensityd(keys=\"image\", nonzero=True, channel_wise=True),\n",
-    "    ]\n",
-    ")"
+    "train_transform = data_transform['train']\n",
+    "val_transform = data_transform['val']"
    ]
   },
   {
