--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -100,38 +100,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Check if this is a notebook or not"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def is_notebook():\n",
-        "    try:\n",
-        "        shell = get_ipython().__class__.__name__\n",
-        "        if shell == 'ZMQInteractiveShell':\n",
-        "            return True  # Jupyter notebook or Jupyter QtConsole\n",
-        "        elif shell == 'TerminalInteractiveShell':\n",
-        "            return False  # Terminal running IPython\n",
-        "        else:\n",
-        "            return False  # Other types\n",
-        "    except NameError:\n",
-        "        return False  # Standard Python interpreter\n",
-        "\n",
-        "# Example usage\n",
-        "if is_notebook():\n",
-        "    logger.debug(\"This is a Jupyter Notebook.\")\n",
-        "else:\n",
-        "    logger.debug(\"This is a Python script (not a Jupyter Notebook).\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "CDR2QhuhKX7O"
       },
@@ -157,35 +125,18 @@
         "import pdb\n",
         "import time\n",
         "import matplotlib.pyplot as plt\n",
-        "import json\n",
         "import pickle\n",
         "\n",
         "from monai.config import print_config\n",
-        "from monai.transforms import (\n",
-        "    Compose,\n",
-        ")\n",
         "from monai.networks.nets import UNet\n",
-        "from monai.transforms import (\n",
-        "    LoadImage,\n",
-        "    Resize,\n",
-        "    NormalizeIntensity,\n",
-        "    Orientation,\n",
-        "    RandFlip,\n",
-        "    RandScaleIntensity,\n",
-        "    RandShiftIntensity,\n",
-        "    RandSpatialCrop,\n",
-        "    CenterSpatialCrop,\n",
-        "    Spacing,\n",
-        "    EnsureType,\n",
-        "    EnsureChannelFirst,\n",
-        ")\n",
         "from monai.metrics import MSEMetric\n",
         "from monai.utils import set_determinism\n",
         "\n",
         "import torch\n",
-        "from torch.utils.data import Dataset, DataLoader, random_split\n",
+        "from torch.utils.data import DataLoader, random_split\n",
         "\n",
-        "from dataset import BrainMRIDataset\n",
+        "from dataset import BraTSDataset\n",
+        "from transforms import contr_syn_transform_2 as data_transform\n",
         "\n",
         "# print_config()"
       ]
@@ -226,66 +177,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "-Yob6T4xKX7S"
-      },
-      "source": [
-        "## Setup transforms for training and validation\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "r1zn16zLKX7S"
-      },
-      "outputs": [],
-      "source": [
-        "# crop_size = [224, 224, 144]\n",
-        "# resize_size = [crop_size[i]//PIXEL_DOWNSAMPLE[i] for i in range(len(crop_size))]\n",
-        "resize_size = [64,64,64]\n",
-        "\n",
-        "train_transform = Compose(\n",
-        "    [\n",
-        "        # load 4 Nifti images and stack them together\n",
-        "        LoadImage(),\n",
-        "        EnsureChannelFirst(),\n",
-        "        EnsureType(),\n",
-        "        Orientation(axcodes=\"RAS\"),\n",
-        "        # Spacing(\n",
-        "        #     pixdim=(1.0, 1.0, 1.0),\n",
-        "        #     mode=(\"bilinear\", \"nearest\"),\n",
-        "        # ),\n",
-        "        # RandSpatialCrop(roi_size=crop_size, random_size=False),\n",
-        "        Resize(spatial_size=resize_size, mode='nearest'),\n",
-        "        # RandFlip(prob=0.5, spatial_axis=0),\n",
-        "        # RandFlip(prob=0.5, spatial_axis=1),\n",
-        "        # RandFlip(prob=0.5, spatial_axis=2),\n",
-        "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
-        "        # RandScaleIntensity(factors=0.1, prob=1.0),\n",
-        "        # RandShiftIntensity(offsets=0.1, prob=1.0),\n",
-        "    ]\n",
-        ")\n",
-        "\n",
-        "val_transform = Compose(\n",
-        "    [\n",
-        "        LoadImage(),\n",
-        "        EnsureChannelFirst(),\n",
-        "        EnsureType(),\n",
-        "        Orientation(axcodes=\"RAS\"),\n",
-        "        # Spacing(\n",
-        "        #     pixdim=(1.0, 1.0, 1.0),\n",
-        "        #     mode=(\"bilinear\", \"nearest\"),\n",
-        "        # ),\n",
-        "        # CenterSpatialCrop(roi_size=crop_size), # added this because model was not handling 155dims\n",
-        "        Resize(spatial_size=resize_size, mode='nearest'),\n",
-        "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
-        "    ]\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {},
       "source": [
         "## Load data"
@@ -310,8 +201,8 @@
       "source": [
         "from torch.utils.data import Subset\n",
         "\n",
-        "all_dataset = BrainMRIDataset(\n",
-        "    root_dir=ROOT_DIR,\n",
+        "all_dataset = BraTSDataset(\n",
+        "    version='2017',\n",
         "    seed = RANDOM_SEED\n",
         ")\n",
         "\n",
@@ -319,8 +210,8 @@
         "train_dataset, val_dataset = random_split(all_dataset, [TRAIN_RATIO, 1-TRAIN_RATIO],\n",
         "                                          generator=torch.Generator().manual_seed(RANDOM_SEED))\n",
         "\n",
-        "train_dataset.dataset.transform = train_transform\n",
-        "val_dataset.dataset.transform = val_transform\n",
+        "train_dataset.dataset.transform = data_transform['train']\n",
+        "val_dataset.dataset.transform = data_transform['val']\n",
         "\n",
         "if TRAIN_DATA_SIZE:\n",
         "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
@@ -337,54 +228,6 @@
         "logger.debug(f\"Length of dataset: {len(train_dataset)}, {len(val_dataset)}\")\n",
         "logger.debug(f\"Batch-size: {BATCHSIZE_TRAIN}, {BATCHSIZE_VAL}\")\n",
         "logger.debug(f\"Length of data-loaders: {len(train_loader)}, {len(val_loader)}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NXd4zV8DKX7S"
-      },
-      "source": [
-        "## Check data shape and visualize"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "jnvWc-L1KX7S"
-      },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'is_notebook' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# pick one image from DecathlonDataset to visualize and check the 4 channels\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mis_notebook\u001b[49m():\n\u001b[1;32m      3\u001b[0m     channels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFLAIR\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT1w\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT1gd\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT2w\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m      4\u001b[0m     val_data_example \u001b[38;5;241m=\u001b[39m val_dataset[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'is_notebook' is not defined"
-          ]
-        }
-      ],
-      "source": [
-        "# pick one image from DecathlonDataset to visualize and check the 4 channels\n",
-        "if is_notebook():\n",
-        "    channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
-        "    val_data_example = val_dataset[0]['image']\n",
-        "    _, im_length, im_width, im_height = val_data_example.shape\n",
-        "    logger.debug(f\"image shape: {val_data_example.shape}\")\n",
-        "    plt.figure(\"image\", (24, 6))\n",
-        "    for i in range(4):\n",
-        "        plt.subplot(1, 4, i + 1)\n",
-        "        plt.title(channels[i], fontsize=30)\n",
-        "        brain_slice = val_data_example[i, :, :, im_height//2].detach().cpu().T\n",
-        "        plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
-        "        plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
-        "        plt.imshow(brain_slice, cmap=\"gray\")\n",
-        "        cbar = plt.colorbar()\n",
-        "        cbar.ax.tick_params(labelsize=20)\n",
-        "    plt.show()"
       ]
     },
     {
