--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "RUN_ID = 20 # set this to prevent overlapped saving of model and data\n",
-    "VARIANCE_THRESHOLD = True\n",
-    "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\""
+    "RANDOM_SEED = 0\n",
+    "ROOT_DIR = \"/scratch1/sachinsa/contr_syn\""
    ]
   },
   {
@@ -37,7 +37,6 @@
     "import pdb\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from dataset import BrainMRIDataset\n",
     "from logger import Logger\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
@@ -86,7 +85,7 @@
    "source": [
     "max_epochs = len(epoch_loss_values)\n",
     "val_interval = len(epoch_loss_values)//len(metric_values)\n",
-    "print(max_epochs)"
+    "print(\"Max epochs:\", max_epochs)"
    ]
   },
   {
@@ -121,7 +120,7 @@
     "    plt.suptitle(\"Training: GLL Loss\", fontsize=20)\n",
     "\n",
     "    k = 2\n",
-    "    for zoom in [20, 200]:\n",
+    "    for zoom in [20, 2000]:\n",
     "        if len(x) > zoom:\n",
     "            plt.subplot(1, 3, k)\n",
     "            x = [i + 1 for i in range(len(epoch_loss_values))]\n",
@@ -160,21 +159,8 @@
    "source": [
     "import torch\n",
     "from monai.networks.nets import UNet\n",
-    "from monai.transforms import (\n",
-    "    LoadImage,\n",
-    "    NormalizeIntensity,\n",
-    "    Orientation,\n",
-    "    CenterSpatialCrop,\n",
-    "    Resize,\n",
-    "    Spacing,\n",
-    "    EnsureType,\n",
-    "    EnsureChannelFirst,\n",
-    ")\n",
-    "from monai.transforms import (\n",
-    "    Compose,\n",
-    ")\n",
-    "from torch.utils.data import Dataset\n",
-    "from transforms import contr_syn_transform_2 as data_transform"
+    "from transforms import contr_syn_transform_2 as data_transform\n",
+    "from dataset import BraTSDataset"
    ]
   },
   {
@@ -210,9 +196,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dataset = BrainMRIDataset(\n",
-    "    root_dir = ROOT_DIR,\n",
-    "    transform = data_transform['val']\n",
+    "all_dataset = BraTSDataset(\n",
+    "    version='2017',\n",
+    "    seed = RANDOM_SEED,\n",
+    "    transform = data_transform['test']\n",
     ")"
    ]
   },
@@ -228,7 +215,7 @@
     "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
     "\n",
     "with torch.no_grad():\n",
-    "    this_input = all_dataset[0]\n",
+    "    this_input = all_dataset.get_with_id('BRATS_385')\n",
     "    input_image = this_input[\"image\"].unsqueeze(0).to(device)\n",
     "    if DO_MASK:\n",
     "        input_mask = [True, False, True, False]\n",
@@ -265,9 +252,8 @@
     "        title = \"Output: \" + r\"$\\sigma$\" + \"\"\n",
     "        brain_slice = this_output_sub[index+4]\n",
     "        brain_slice = torch.exp(brain_slice)\n",
-    "        if VARIANCE_THRESHOLD:\n",
-    "            var_threshold = torch.quantile(brain_slice.float(), 0.95).item()\n",
-    "            brain_slice[brain_slice >= var_threshold] = var_threshold\n",
+    "        var_threshold = torch.quantile(brain_slice.float(), 0.95).item()\n",
+    "        brain_slice[brain_slice >= var_threshold] = var_threshold\n",
     "    elif label == \"q0\":\n",
     "        start_index = 4\n",
     "        title = \"Output: \" + \"q0\"\n",
@@ -287,7 +273,7 @@
     "    brain_slice = brain_slice.detach().cpu().T\n",
     "    plt.imshow(brain_slice, cmap=\"gray\")\n",
     "    plt.xlabel('')\n",
-    "    if i == 0:\n",
+    "    if index == 0:\n",
     "        plt.ylabel(title, fontsize=30)\n",
     "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
     "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
