--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_ID = 0\n",
+    "RUN_ID = 1\n",
     "ROOT_DIR = \"/scratch1/sachinsa/brats_seg\"\n",
     "DATA_ROOT_DIR = \"/scratch1/sachinsa/data\""
    ]
@@ -30,7 +30,6 @@
     "import pdb\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from dataset import BrainMRIDataset\n",
     "from logger import Logger\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
@@ -86,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(\"train\", (12, 6))\n",
+    "plt.figure(\"train\", (12, 4))\n",
     "plt.subplot(1, 2, 1)\n",
     "plt.title(\"Epoch Average Loss\")\n",
     "x = [i + 1 for i in range(len(epoch_loss_values))]\n",
@@ -101,7 +100,7 @@
     "plt.plot(x, y, color=\"green\")\n",
     "plt.show()\n",
     "\n",
-    "plt.figure(\"train\", (18, 6))\n",
+    "plt.figure(\"train\", (18, 4))\n",
     "plt.subplot(1, 3, 1)\n",
     "plt.title(\"Val Mean Dice TC\")\n",
     "x = [val_interval * (i + 1) for i in range(len(metric_values_tc))]\n",
@@ -137,23 +136,10 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from monai.networks.nets import UNet\n",
-    "from monai.transforms import (\n",
-    "    LoadImage,\n",
-    "    NormalizeIntensity,\n",
-    "    Orientation,\n",
-    "    CenterSpatialCrop,\n",
-    "    Resize,\n",
-    "    Spacing,\n",
-    "    EnsureType,\n",
-    "    EnsureChannelFirst,\n",
-    ")\n",
     "from monai.transforms import (\n",
     "    Compose,\n",
     ")\n",
     "from torch.utils.data import Dataset\n",
-    "\n",
-    "\n",
     "\n",
     "from monai.apps import DecathlonDataset\n",
     "from monai.config import print_config\n",
@@ -253,11 +239,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "val_index = 6\n",
     "with torch.no_grad():\n",
-    "    i = 0\n",
+    "    # select one image to evaluate and visualize the model output\n",
+    "    input_image = val_ds[val_index][\"image\"].unsqueeze(0).to(device)\n",
+    "    roi_size = (128, 128, 64)\n",
+    "    sw_batch_size = 4\n",
+    "    this_output = inference(input_image)\n",
+    "    this_output = post_trans(this_output[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, _, im_length, im_width, im_height = input_image.shape\n",
+    "im_length, im_width, im_height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, _, im_length, im_width, im_height = input_image.shape\n",
+    "h_index = im_height//2\n",
+    "label_list = [\"TC\", \"WT\", \"ET\"]\n",
+    "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
+    "\n",
+    "def plot_brain(index, label):\n",
+    "    if label == \"ground_truth\":\n",
+    "        start_index = 0\n",
+    "        brain_slice = val_ds[val_index][\"label\"]\n",
+    "        title = \"Ground Truth\"\n",
+    "    elif label == \"prediction\":\n",
+    "        start_index = len(label_list)\n",
+    "        brain_slice = this_output\n",
+    "        title = \"Prediction\"\n",
+    "\n",
+    "    brain_slice = brain_slice[index, :, :, 70].detach().cpu().T\n",
+    "    plt.subplot(2, 3, start_index + index + 1)\n",
+    "    plt.title(label_list[index], fontsize=30)\n",
+    "    if index == 0:\n",
+    "        plt.ylabel(title, fontsize=30)\n",
+    "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
+    "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
+    "    plt.imshow(brain_slice, cmap=\"gray\")\n",
+    "\n",
+    "\n",
+    "plt.figure(\"image\", (24, 6))\n",
+    "for i in range(4):\n",
+    "    plt.subplot(1, 4, i + 1)\n",
+    "    plt.title(channels[i], fontsize=30)\n",
+    "    if i == 0:\n",
+    "        plt.ylabel(\"Input\", fontsize=30)\n",
+    "    plt.xticks([0, im_width - 1], [0, im_width - 1], fontsize=15)\n",
+    "    plt.yticks([0, im_length - 1], [0, im_length - 1], fontsize=15)\n",
+    "    plt.imshow(val_ds[val_index][\"image\"][i, :, :, 70].detach().cpu().T, cmap=\"gray\")\n",
+    "plt.suptitle(f\"{val_ds.get_indices()[val_index]} (h={h_index}/{im_height})\", fontsize=20)\n",
+    "plt.show()\n",
+    "    \n",
+    "plt.figure(\"label\", (18, 12))\n",
+    "for i in range(len(label_list)):\n",
+    "    plot_brain(i, \"ground_truth\")\n",
+    "for i in range(len(label_list)):\n",
+    "    plot_brain(i, \"prediction\")\n",
+    "plt.suptitle(f\"{val_ds.get_indices()[val_index]} (h={h_index}/{im_height})\", fontsize=20)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with torch.no_grad():\n",
+    "    # i = 0\n",
     "    for val_data in val_loader:\n",
-    "        i += 1\n",
-    "        if i > 4: break\n",
+    "        # i += 1\n",
+    "        # if i > 4: break\n",
     "        val_inputs, val_labels = (\n",
     "            val_data[\"image\"].to(device),\n",
     "            val_data[\"label\"].to(device),\n",
@@ -275,45 +339,10 @@
     "\n",
     "metric_tc, metric_wt, metric_et = metric_batch_org[0].item(), metric_batch_org[1].item(), metric_batch_org[2].item()\n",
     "\n",
-    "print(f\"metric: {metric:.4f}\")\n",
-    "print(f\"metric_tc: {metric_tc:.4f}\")\n",
-    "print(f\"metric_wt: {metric_wt:.4f}\")\n",
-    "print(f\"metric_et: {metric_et:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with torch.no_grad():\n",
-    "    # select one image to evaluate and visualize the model output\n",
-    "    val_input = val_ds[6][\"image\"].unsqueeze(0).to(device)\n",
-    "    roi_size = (128, 128, 64)\n",
-    "    sw_batch_size = 4\n",
-    "    val_output = inference(val_input)\n",
-    "    val_output = post_trans(val_output[0])\n",
-    "    plt.figure(\"image\", (24, 6))\n",
-    "    for i in range(4):\n",
-    "        plt.subplot(1, 4, i + 1)\n",
-    "        plt.title(f\"image channel {i}\")\n",
-    "        plt.imshow(val_ds[6][\"image\"][i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-    "    plt.show()\n",
-    "    # visualize the 3 channels label corresponding to this image\n",
-    "    plt.figure(\"label\", (18, 6))\n",
-    "    for i in range(3):\n",
-    "        plt.subplot(1, 3, i + 1)\n",
-    "        plt.title(f\"label channel {i}\")\n",
-    "        plt.imshow(val_ds[6][\"label\"][i, :, :, 70].detach().cpu())\n",
-    "    plt.show()\n",
-    "    # visualize the 3 channels model output corresponding to this image\n",
-    "    plt.figure(\"output\", (18, 6))\n",
-    "    for i in range(3):\n",
-    "        plt.subplot(1, 3, i + 1)\n",
-    "        plt.title(f\"output channel {i}\")\n",
-    "        plt.imshow(val_output[i, :, :, 70].detach().cpu())\n",
-    "    plt.show()"
+    "print(f\"metric: {metric:.3f}\")\n",
+    "print(f\"metric_tc: {metric_tc:.3f}\")\n",
+    "print(f\"metric_wt: {metric_wt:.3f}\")\n",
+    "print(f\"metric_et: {metric_et:.3f}\")"
    ]
   }
  ],
