--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,13 +48,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 20\n",
+        "RUN_ID = 21\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
-        "SET_VARIANCE = True\n",
         "MAX_EPOCHS = 6000\n",
-        "TRAIN_DATA_SIZE = 50\n",
+        "TRAIN_DATA_SIZE = 200\n",
         "BATCHSIZE_TRAIN = 2\n",
+        "SET_VARIANCE = True\n",
         "# PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
         "VAL_INTERVAL = 10\n",
         "TRAIN_RATIO = 0.8\n",
@@ -258,6 +258,8 @@
       "source": [
         "device = torch.device(\"cuda:0\")\n",
         "out_channels = 12 if QR_REGRESSION else 8\n",
+        "\n",
+        "# TODO: finetune model parameters\n",
         "model = UNet(\n",
         "    spatial_dims=3, # 3D\n",
         "    in_channels=4,\n",
