added new mask algo to training; fixed validation bug

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,7 +48,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 21\n",
+        "RUN_ID = 0\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "MAX_EPOCHS = 6000\n",
@@ -64,7 +64,7 @@
         "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
-        "SANITY_CHECK = False\n",
+        "SANITY_CHECK = True\n",
         "if SANITY_CHECK:\n",
         "    RUN_ID = 0\n",
         "    MAX_EPOCHS = 15\n",
@@ -122,6 +122,7 @@
       "source": [
         "import os\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "import pdb\n",
         "import time\n",
         "import matplotlib.pyplot as plt\n",
@@ -194,25 +195,27 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "WRkpcvfEHY7Q"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
+        "from transforms import tumor_seg_transform\n",
         "from torch.utils.data import Subset\n",
         "\n",
-        "all_dataset = BraTSDataset(\n",
+        "train_dataset = BraTSDataset(\n",
         "    version='2017',\n",
-        "    seed = RANDOM_SEED\n",
+        "    section = 'training',\n",
+        "    seed = RANDOM_SEED,\n",
+        "    transform = tumor_seg_transform['train']\n",
         ")\n",
         "\n",
-        "# Split the dataset\n",
-        "train_dataset, val_dataset = random_split(all_dataset, [TRAIN_RATIO, 1-TRAIN_RATIO],\n",
-        "                                          generator=torch.Generator().manual_seed(RANDOM_SEED))\n",
+        "val_dataset = BraTSDataset(\n",
+        "    version='2017',\n",
+        "    section = 'validation',\n",
+        "    seed = RANDOM_SEED,\n",
+        "    transform = tumor_seg_transform['val']\n",
+        ")\n",
         "\n",
-        "train_dataset.dataset.transform = data_transform['train']\n",
-        "val_dataset.dataset.transform = data_transform['val']\n",
-        "\n",
+        "# TODO: add logic to get subset inside BraTSDataset\n",
         "if TRAIN_DATA_SIZE:\n",
         "    train_dataset = Subset(train_dataset, list(range(TRAIN_DATA_SIZE)))\n",
         "    val_dataset = Subset(val_dataset, list(range(TRAIN_DATA_SIZE//4)))\n",
@@ -228,6 +231,18 @@
         "logger.debug(f\"Length of dataset: {len(train_dataset)}, {len(val_dataset)}\")\n",
         "logger.debug(f\"Batch-size: {BATCHSIZE_TRAIN}, {BATCHSIZE_VAL}\")\n",
         "logger.debug(f\"Length of data-loaders: {len(train_loader)}, {len(val_loader)}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load masks\n",
+        "mask_root_dir = \"/scratch1/sachinsa/data/masks/brats2017\"\n",
+        "train_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index_col=0)\n",
+        "val_mask_df = pd.read_csv(os.path.join(mask_root_dir, \"val_mask.csv\"), index_col=0)"
       ]
     },
     {
@@ -378,17 +393,25 @@
       },
       "outputs": [],
       "source": [
+        "from monai.inferers import sliding_window_inference\n",
+        "\n",
         "mse_metric = MSEMetric(reduction=\"mean\")\n",
         "\n",
         "# define inference method\n",
         "def inference(input):\n",
         "    def _compute(input):\n",
-        "        output = model(input)\n",
-        "        return output\n",
+        "        return sliding_window_inference(\n",
+        "            inputs=input,\n",
+        "            roi_size=(240, 240, 160),\n",
+        "            sw_batch_size=1,\n",
+        "            predictor=model,\n",
+        "            overlap=0.5,\n",
+        "        )\n",
+        "        # output = model(input)\n",
+        "        # return output\n",
         "\n",
         "    with torch.amp.autocast('cuda'):\n",
         "        return _compute(input)\n",
-        "\n",
         "\n",
         "# use amp to accelerate training\n",
         "scaler = torch.amp.GradScaler('cuda')\n",
@@ -431,21 +454,21 @@
         "    step = 0\n",
         "    criterion = loss_scheduler(epoch)\n",
         "    step_start = time.time()\n",
-        "    for batch_data in train_loader:\n",
+        "    for train_data in train_loader:\n",
         "        data_loaded_time = time.time() - step_start\n",
         "        step += 1\n",
-        "        inputs, mask, id = (\n",
-        "            batch_data[\"image\"].to(device),\n",
-        "            batch_data[\"mask\"].to(device),\n",
-        "            batch_data[\"id\"],\n",
+        "        train_inputs, train_ids = (\n",
+        "            train_data[\"image\"].to(device),\n",
+        "            train_data[\"id\"],\n",
         "        )\n",
+        "        train_mask = torch.from_numpy(train_mask_df.loc[train_ids.tolist(), :].values).to(device)\n",
         "        optimizer.zero_grad()\n",
         "        with torch.amp.autocast('cuda'):\n",
-        "            target = inputs.clone()\n",
+        "            target = train_inputs.clone()\n",
         "            if DO_MASK:\n",
-        "                inputs = inputs*~mask[:,:,None,None,None]\n",
-        "            outputs = model(inputs)            \n",
-        "            loss = criterion(outputs, target)\n",
+        "                train_inputs = train_inputs*~train_mask[:,:,None,None,None]\n",
+        "            train_outputs = model(train_inputs)            \n",
+        "            loss = criterion(train_outputs, target)\n",
         "        scaler.scale(loss).backward()\n",
         "        scaler.step(optimizer)\n",
         "        scaler.update()\n",
@@ -469,10 +492,11 @@
         "        model.eval()\n",
         "        with torch.no_grad():\n",
         "            for val_data in val_loader:\n",
-        "                val_inputs, val_mask = (\n",
-        "                    batch_data[\"image\"].to(device),\n",
-        "                    batch_data[\"mask\"].to(device),\n",
+        "                val_inputs, val_ids = (\n",
+        "                    val_data[\"image\"].to(device),\n",
+        "                    val_data[\"id\"],\n",
         "                )\n",
+        "                val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
         "                val_target = val_inputs.clone()\n",
         "                val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
         "                val_outputs = inference(val_inputs)\n",
