moved helper files a folder

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -21,7 +21,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from logger import Logger\n",
+        "from utils.logger import Logger\n",
         "logger = Logger(log_level='DEBUG')"
       ]
     },
@@ -48,7 +48,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "RUN_ID = 0\n",
+        "RUN_ID = 22\n",
         "QR_REGRESSION = True\n",
         "DO_MASK = True\n",
         "MAX_EPOCHS = 6000\n",
@@ -64,7 +64,7 @@
         "ROOT_DIR = \"/scratch1/sachinsa/cont_syn\"\n",
         "\n",
         "# test code sanity (for silly errors)\n",
-        "SANITY_CHECK = True\n",
+        "SANITY_CHECK = False\n",
         "if SANITY_CHECK:\n",
         "    RUN_ID = 0\n",
         "    MAX_EPOCHS = 15\n",
@@ -136,8 +136,8 @@
         "import torch\n",
         "from torch.utils.data import DataLoader, random_split\n",
         "\n",
-        "from dataset import BraTSDataset\n",
-        "from transforms import contr_syn_transform_2 as data_transform\n",
+        "from utils.dataset import BraTSDataset\n",
+        "from utils.transforms import contr_syn_transform_2 as data_transform\n",
         "\n",
         "# print_config()"
       ]
@@ -198,7 +198,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from transforms import tumor_seg_transform\n",
+        "from utils.transforms import tumor_seg_transform\n",
         "from torch.utils.data import Subset\n",
         "\n",
         "train_dataset = BraTSDataset(\n",
