refactored code; added mask logic

--- a/src/analyse_seg_results.ipynb
+++ b/src/analyse_seg_results.ipynb
@@ -30,7 +30,7 @@
     "import pdb\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from logger import Logger\n",
+    "from utils.logger import Logger\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
    ]
@@ -156,7 +156,7 @@
     ")\n",
     "from monai.utils import set_determinism\n",
     "from tqdm import tqdm\n",
-    "from transforms import tumor_seg_transform as data_transform\n",
+    "from utils.transforms import tumor_seg_transform as data_transform\n",
     "\n",
     "import torch"
    ]
