--- a/src/brats_segmentation.ipynb
+++ b/src/brats_segmentation.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from logger import Logger\n",
+    "from utils.logger import Logger\n",
     "logger = Logger(log_level='DEBUG')"
    ]
   },
@@ -106,7 +106,7 @@
     "\n",
     "import torch\n",
     "\n",
-    "from transforms import tumor_seg_transform as data_transform\n",
+    "from utils.transforms import tumor_seg_transform as data_transform\n",
     "\n",
     "# print_config()"
    ]
