--- a/src/generate_mask.ipynb
+++ b/src/generate_mask.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mask import Mask1\n",
+    "from utils.mask import Mask1\n",
     "\n",
     "# Mask-Algo 1 verification\n",
     "miss_prob_expected = [0.40, 0.12, 0.30, 0.15]\n",
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mask import Mask0\n",
+    "from utils.mask import Mask0\n",
     "\n",
     "# Mask-Algo 0 verification\n",
     "mask_obj = Mask0(num_samples=10000, num_contrasts=4, seed=0)\n",
@@ -53,10 +53,10 @@
     "import pdb\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from logger import Logger\n",
+    "from utils.logger import Logger\n",
     "\n",
-    "from dataset import BraTSDataset\n",
-    "from transforms import tumor_seg_transform"
+    "from utils.dataset import BraTSDataset\n",
+    "from utils.transforms import tumor_seg_transform"
    ]
   },
   {
@@ -104,6 +104,7 @@
     "        )\n",
     "        \n",
     "    ids = dataset.get_ids()\n",
+    "    print(ids)\n",
     "    num_samples=len(ids)\n",
     "    mask_obj = Mask1(num_samples=num_samples, miss_prob_expected=miss_prob_expected, seed=0)\n",
     "    miss_info = mask_obj.miss_info\n",
@@ -112,7 +113,7 @@
     "    logger.debug(mask_df.shape)\n",
     "    print(mask_df.head())\n",
     "\n",
-    "    # save masking information\n",
+    "    # # save masking information\n",
     "    if section == 'train':\n",
     "        mask_df.to_csv(os.path.join(mask_root_dir, \"train_mask.csv\"), index=True)\n",
     "    else:\n",
@@ -132,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mask import verify_mask_algo\n",
+    "from utils.mask import verify_mask_algo\n",
     "\n",
     "for section in ['train', 'val']:\n",
     "    logger.debug(section)\n",
