--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -34,8 +34,6 @@
         "* RUN_ID : set this to prevent overlapped saving of model and data\n",
         "\n",
         "* DO_MASK : Set to True if mask is to be applied while training\n",
-        "* SET_VARIANCE : Set to True if variance is to be trained in loss function\n",
-        "* PIXEL_DOWNSAMPLE : How much to scale down each axis. In other words, mm per pixel/voxel\n",
         "\n",
         "* MAX_EPOCHS\n",
         "* VAL_INTERVAL : how frequently the validation code should be run\n",
@@ -54,8 +52,6 @@
         "MAX_EPOCHS = 6000\n",
         "TRAIN_DATA_SIZE = 200\n",
         "BATCHSIZE_TRAIN = 2\n",
-        "SET_VARIANCE = True\n",
-        "# PIXEL_DOWNSAMPLE = [2, 2, 2]\n",
         "VAL_INTERVAL = 10\n",
         "TRAIN_RATIO = 0.8\n",
         "RANDOM_SEED = 0\n",
@@ -75,7 +71,6 @@
         "    'RUN_ID': RUN_ID,\n",
         "    'QR_REGRESSION': QR_REGRESSION,\n",
         "    'DO_MASK': DO_MASK,\n",
-        "    'SET_VARIANCE': SET_VARIANCE,\n",
         "    'MAX_EPOCHS': MAX_EPOCHS,\n",
         "    'ROOT_DIR': ROOT_DIR\n",
         "}\n",
@@ -84,11 +79,9 @@
         "logger.info(f\"RUN_ID: {RUN_ID}\")\n",
         "logger.info(f\"QR_REGRESSION: {QR_REGRESSION}\")\n",
         "logger.info(f\"DO_MASK: {DO_MASK}\")\n",
-        "logger.info(f\"SET_VARIANCE: {SET_VARIANCE}\")\n",
         "logger.info(f\"MAX_EPOCHS: {MAX_EPOCHS}\")\n",
         "logger.info(f\"TRAIN_DATA_SIZE: {TRAIN_DATA_SIZE}\")\n",
         "logger.info(f\"BATCHSIZE_TRAIN: {BATCHSIZE_TRAIN}\")\n",
-        "# logger.info(f\"PIXEL_DOWNSAMPLE: {PIXEL_DOWNSAMPLE}\")\n",
         "logger.info(f\"VAL_INTERVAL: {VAL_INTERVAL}\")\n",
         "logger.info(f\"TRAIN_RATIO: {TRAIN_RATIO}\")\n",
         "logger.info(f\"RANDOM_SEED: {RANDOM_SEED}\")\n",
@@ -129,15 +122,15 @@
         "import pickle\n",
         "\n",
         "from monai.config import print_config\n",
-        "from monai.networks.nets import UNet\n",
         "from monai.metrics import MSEMetric\n",
         "from monai.utils import set_determinism\n",
         "\n",
         "import torch\n",
-        "from torch.utils.data import DataLoader, random_split\n",
+        "from torch.utils.data import DataLoader, Subset\n",
         "\n",
         "from utils.dataset import BraTSDataset\n",
-        "from utils.transforms import contr_syn_transform_2 as data_transform\n",
+        "from utils.model import create_UNet3D, inference\n",
+        "from utils.transforms import tumor_seg_transform\n",
         "\n",
         "# print_config()"
       ]
@@ -198,9 +191,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from utils.transforms import tumor_seg_transform\n",
-        "from torch.utils.data import Subset\n",
-        "\n",
         "train_dataset = BraTSDataset(\n",
         "    version='2017',\n",
         "    section = 'training',\n",
@@ -273,34 +263,8 @@
       "source": [
         "device = torch.device(\"cuda:0\")\n",
         "out_channels = 12 if QR_REGRESSION else 8\n",
-        "\n",
-        "# TODO: finetune model parameters\n",
-        "model = UNet(\n",
-        "    spatial_dims=3, # 3D\n",
-        "    in_channels=4,\n",
-        "    out_channels=out_channels,\n",
-        "    channels=(4, 8, 16),\n",
-        "    strides=(2, 2),\n",
-        "    num_res_units=2\n",
-        ").to(device)\n",
+        "model = create_UNet3D(out_channels, device)\n",
         "logger.debug(\"Model defined\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Calculate and display the total number of parameters\n",
-        "def count_parameters(model):\n",
-        "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-        "\n",
-        "total_params = count_parameters(model)\n",
-        "# logger.debug(f\"Total number of trainable parameters: {total_params}\")\n",
-        "\n",
-        "# Print the model architecture\n",
-        "# logger.debug(f\"Model Architecture:\\n {model}\")"
       ]
     },
     {
@@ -343,37 +307,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def gaussian_nll_loss(outputs, target):\n",
-        "    # input is 4 channel images, outputs is 8 channel images\n",
-        "    outputs_mean = outputs[:, :4, ...]\n",
-        "    if not SET_VARIANCE:\n",
-        "        log_std = torch.zeros_like(outputs_mean) # sigma = 1\n",
-        "    else:\n",
-        "        log_std = outputs[:, 4:, ...]\n",
-        "        eps = np.log(1e-6)/2 # -6.9\n",
-        "\n",
-        "        # TODO: should the clamping be with or without autograd?\n",
-        "        log_std = log_std.clone()\n",
-        "        with torch.no_grad():\n",
-        "            log_std.clamp_(min=eps)\n",
-        "\n",
-        "    cost1 = (target - outputs_mean)**2 / (2*torch.exp(2*log_std))\n",
-        "    cost2 = log_std\n",
-        "\n",
-        "    return torch.mean(cost1 + cost2)\n",
-        "\n",
-        "def mse_loss(outputs, target):\n",
-        "    return torch.nn.functional.mse_loss(outputs[:, :4, ...], target)\n",
-        "\n",
-        "def qr_loss(out, tgt, q0=0.5, q1=0.841, q2=0.159):\n",
-        "    out0 = out[:, :4, ...]\n",
-        "    out1 = out[:, 4:8, ...]\n",
-        "    out2 = out[:, 8:, ...]\n",
-        "    custom_loss0 = torch.sum(torch.max(q0 * (out0 - tgt), (q0 - 1.0) * (out0 - tgt)))\n",
-        "    custom_loss1 = torch.sum(torch.max(q1 * (out1 - tgt), (q1 - 1.0) * (out1 - tgt)))\n",
-        "    custom_loss2 = torch.sum(torch.max(q2 * (out2 - tgt), (q2 - 1.0) * (out2 - tgt)))\n",
-        "\n",
-        "    return custom_loss0 + custom_loss1 + custom_loss2\n",
+        "from utils.loss import qr_loss, mse_loss, gaussian_nll_loss\n",
         "\n",
         "def loss_scheduler(epoch):\n",
         "    if QR_REGRESSION:\n",
@@ -393,25 +327,7 @@
       },
       "outputs": [],
       "source": [
-        "from monai.inferers import sliding_window_inference\n",
-        "\n",
         "mse_metric = MSEMetric(reduction=\"mean\")\n",
-        "\n",
-        "# define inference method\n",
-        "def inference(input):\n",
-        "    def _compute(input):\n",
-        "        return sliding_window_inference(\n",
-        "            inputs=input,\n",
-        "            roi_size=(240, 240, 160),\n",
-        "            sw_batch_size=1,\n",
-        "            predictor=model,\n",
-        "            overlap=0.5,\n",
-        "        )\n",
-        "        # output = model(input)\n",
-        "        # return output\n",
-        "\n",
-        "    with torch.amp.autocast('cuda'):\n",
-        "        return _compute(input)\n",
         "\n",
         "# use amp to accelerate training\n",
         "scaler = torch.amp.GradScaler('cuda')\n",
@@ -499,7 +415,7 @@
         "                val_mask = torch.from_numpy(val_mask_df.loc[val_ids.tolist(), :].values).to(device)\n",
         "                val_target = val_inputs.clone()\n",
         "                val_inputs = val_inputs*~val_mask[:,:,None,None,None]\n",
-        "                val_outputs = inference(val_inputs)\n",
+        "                val_outputs = inference(val_inputs, model)\n",
         "                val_output_main = val_outputs[:,:4,...]\n",
         "                mse_metric(y_pred=val_output_main, y=val_target)\n",
         "\n",
