--- a/src/ref_code/_analyse_results.ipynb
+++ b/src/ref_code/_analyse_results.ipynb
@@ -36,7 +36,7 @@
     "import pdb\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from dataset import BrainMRIDataset"
+    "from utils.dataset import BrainMRIDataset"
    ]
   },
   {
