--- a/src/save_results.ipynb
+++ b/src/save_results.ipynb
@@ -38,12 +38,12 @@
     "import pdb\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from logger import Logger\n",
+    "from utils.logger import Logger\n",
     "\n",
     "import torch\n",
     "from monai.networks.nets import UNet\n",
-    "from transforms import contr_syn_transform_2 as data_transform\n",
-    "from dataset import BraTSDataset\n",
+    "from utils.transforms import contr_syn_transform_2 as data_transform\n",
+    "from utils.dataset import BraTSDataset\n",
     "\n",
     "logger = Logger(log_level='DEBUG')"
    ]
