--- a/src/ref_code/_main.ipynb
+++ b/src/ref_code/_main.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "from logger import Logger\n",
+    "from utils.logger import Logger\n",
     "logger = Logger(log_level='DEBUG')\n",
     "\n",
     "\n",
@@ -187,7 +187,7 @@
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
     "\n",
-    "from dataset import BrainMRIDataset\n",
+    "from utils.dataset import BrainMRIDataset\n",
     "\n",
     "# print_config()"
    ]
